--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,37 @@
 *{
     background-color: white;
 }
+a{
+    text-decoration: none;
+}
 .navbar {
-    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 20px;
+    border-bottom: 2px solid rgb(84, 42, 42);
+
 }
 .desktop-nav{
     display: flex;
+    padding-top: 30px;
+   
 }
 .desktop-nav{
     display: flex;
     flex-direction: row;
     gap: 20px ;
+}
+.nav-link{
+    color: rgb(28, 28, 91);
+    font-weight: 500;
+}
+
+.person{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+.person-left{
+    line-height: 1.7;
 }
